syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.nvvi9";

package com.nvvi9;

message IdQuery{
  repeated string id = 1;
}